Fixed Generator and Recovery pages so that the fields are aligned.

--- a/static/ui/components/sass/Download.scss
+++ b/static/ui/components/sass/Download.scss
@@ -49,11 +49,7 @@ $background: #ffffff;
 	flex-direction: column;
 	align-items: flex-start;
 	color: black;
-	background-blend-mode: screen;
-	background-image: url('assets/webclient.webp');
-	background-color: #0E399B;
-	background-size: cover;
-	opacity: 0.5;
+	background-color: $dl-option-color;
 	font-size: 1.5vw;
 	padding: 4%;
 	border-radius: 30px;
