--- a/static/ui/components/sass/PathSelector.scss
+++ b/static/ui/components/sass/PathSelector.scss
@@ -1,7 +1,8 @@
 $blue-highlight: #6385E9;
 
 .path-selector {
-	height: 8vh;
+	width: 96vw;
+	height: 12.5vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
